2009-09-14  Jeff Hobbs  <jeffh@ActiveState.com>

	* generic/tkMenuDraw.c (TkPostSubmenu): Fix reposting of submenu in
	* win/tkWinMenu.c (TkWinHandleMenuEvent): torn off Windows menu.
	[Bug 873613]
	(DrawMenuEntryArrow): Draw Win menu arrow after being torn
	off. [Bug 873608]

2009-09-09  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixRFont.c (InitFont): Move pattern disposal in error case
	to callers so they have more options when they come to recovering from
	the failure.
	(TkpGetFontFromAttributes): If the default attributes don't work, try
	adding a setting to turn off use of XRender. That seems to work for
	some people for unexplained reasons (possibly local misconfiguration).
	* generic/tkFont.c (Tk_AllocFontFromObj): Stop this function from
	keeling over in a heap when the low-level font allocation fails. An
	error beats a crash! (Issue reported on comp.lang.tcl by Denis
	Berezhnoy.)

2009-09-07  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tkFocus.c:	fix potential null dereference flagged by clang
	* generic/tkMenu.c:	static analyzer.
	* generic/tkTextBTree.c:
	* generic/tkTextDisp.c:
	* generic/tkTextIndex.c:

	* generic/tkConsole.c:	silence false positives from clang static
	* generic/tkTest.c:	analyzer about potential null dereference.
	* generic/tkText.c:
	* generic/tkTextBTree.c:
	* generic/tkTextTag.c:
	* generic/tkVisual.c:

2009-09-04  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tkInt.h (TkDisplay): Remove fields that are never read from.
	* generic/tkWindow.c (Tk_DestroyWindow): Remove code to write to
	write-only fields of TkDisplay. This follows on from [Bug 2039720].

2009-08-25  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tkUnixSend.c (ServerSecure): [Bug 1909931]: Added some support
	for server-interpreted access control addreses.

2009-08-24  Donal K. Fellows  <dkf@users.sf.net>

	* library/msgbox.tcl (::tk::MessageBox): Correct bindings so that they
	work with ttk::buttons. Reported by Hans-Christoph Steiner.
