@@ -8,7 +8,7 @@
  * See the file "license.terms" for information on usage and redistribution of
  * this file, and for a DISCLAIMER OF ALL WARRANTIES.
  *
- * RCS: @(#) $Id: tkGrid.c,v 1.53 2009/08/19 23:02:00 pspjuth Exp $
+ * RCS: @(#) $Id: tkGrid.c,v 1.54 2009/09/18 22:35:00 pspjuth Exp $
  */
 
 #include "tkInt.h"
@@ -3293,6 +3293,7 @@ ConfigureSlaves(
 	    if (TkSetGeometryMaster(interp, masterPtr->tkwin, "grid")
 		    != TCL_OK) {
 		Tk_ManageGeometry(slave, NULL, NULL);
+		Unlink(slavePtr);
 		return TCL_ERROR;
 	    }
 	    masterPtr->flags |= ALLOCED_MASTER;
